# bedrock-flow-demo

./: .gitignore  README.md  pyproject.toml
src/aws_bedrock_chat/: app.py
src/aws_bedrock_chat/services/: bedrock_service.py
terraform/: locals.tf  main.tf  providers.tf  variables.tf
terraform/modules/bedrock-agent/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: data.tf  main.tf  outputs.tf  variables.tf
terraform/modules/knowledge-base/: main.tf  outputs.tf  variables.tf
terraform/modules/opensearch/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  variables.tf
