[tool.poetry]
name = "aws-bedrock-chat"
version = "0.1.0"
description = "A chat application using AWS Bedrock and Chainlit"
authors = ["Rich rich.liu0912@hotmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chainlit = "^2.1.2"
boto3 = "^1.36.14"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 